# mythical_stable_project

./: README.md  pyproject.toml
mythical_stable/: __init__.py  __main__.py  protocols.py
mythical_stable/core/: __init__.py  creature.py  dragon.py  fly_mixin.py  mission_record.py  phoenix.py  stable.py  unicorn.py  utils.py
mythical_stable/patterns/: __init__.py  commands.py  observers.py  strategies.py
mythical_stable/services/: __init__.py  dispatcher.py  mission_service.py  notifiers.py
tests/: conftest.py  test_core.py  test_patterns.py  test_services.py
